<resources>
    <string name="app_name">小菜鸟</string>
    <string name="home">首页</string>
    <string name="more">更多</string>
    <string name="friend">好友</string>
    <string name="mine">我的</string>
    <string name="delivery">寄件</string>
    <string name="pickup">取件</string>
    <string name="login">登录</string>
    <string name="logon">注册</string>
    <string name="logout">注销</string>
    <string name="calls">快递通讯录</string>
    <string name="lines">帮拿</string>
    <string name="nickname">昵称</string>
    <string name="username">姓名</string>
    <string name="password">密码</string>
    <string name="okpassword">确定密码</string>
    <string name="errorpwd">密码错误</string>
    <string name="yzm">验证码</string>
    <string name="sendyzm">发送验证码</string>
    <string name="email">邮箱</string>
    <string name="tel">手机号码</string>
    <string name="dob">出生日期</string>
    <string name="homeAdd">地址</string>
    <string name="telOrEmail">手机号码/邮箱</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="sex">性别</string>
    <string name="head">头    像</string>
    <string name="onclickAvatar">上传头像</string>
    <string name="checkin">签到</string>
    <string name="user_info">个人资料</string>
    <string name="save">保存</string>
    <string name="search">搜索</string>
    <string name="online">[在线]</string>
    <string name="offline">[离线]</string>
    <string name="callsfriend">通讯录好友</string>
    <string name="UAPP">用户协议及隐私政策</string>
    <string name="send">发送好友请求</string>
    <string name="ad_attribution">Ad</string>
    <string name="setting">设置</string>
    <string name="addfriend">加好友</string>
</resources>
