<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorDefault"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".activity.NavActivity"
    android:clipToPadding="true"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:id="@+id/nav_ll_title"
        android:elevation="@dimen/dp_7"
        android:weightSum="3"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/colorDefault"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/dp_28"
                android:layout_height="@dimen/dp_28"
                android:id="@+id/nav_ll_title_iv_avatar"
                android:layout_marginStart="-32dp"
                android:src="@drawable/avatar225white"
                android:background="@drawable/style_imageview_round"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nav_ll_title_tv_name"
                android:text="@string/app_name"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_18"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:layout_width="@dimen/dp_36"
                android:layout_height="@dimen/dp_36"
                android:id="@+id/nav_ll_title_iv_menu"
                android:layout_marginRight="-32dp"
                android:src="@drawable/more215white"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>
    <cn.edu.cqcet.yd1701.team11.smallrooike.customview.NoScrollViewPager
        android:id="@+id/nav_viewpager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:background="@color/colorWhite" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/dp_7"
        android:id="@+id/nav_ll_nav"
        android:weightSum="4"
        android:background="@color/colorWhite"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/nav_ll_home"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                android:paddingStart="@dimen/dp_4"
                android:paddingEnd="@dimen/dp_4"
                android:id="@+id/nav_iv_home"
                android:src="@drawable/home204xxblue"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nav_tv_home"
                android:textSize="@dimen/sp_14"
                android:text="@string/home"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/nav_ll_more"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                android:paddingStart="@dimen/dp_4"
                android:paddingEnd="@dimen/dp_4"
                android:id="@+id/nav_iv_more"
                android:src="@drawable/applications30xxblue"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nav_tv_more"
                android:textSize="@dimen/sp_14"
                android:text="@string/more"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/nav_ll_friend"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                android:paddingStart="@dimen/dp_4"
                android:paddingEnd="@dimen/dp_4"
                android:id="@+id/nav_iv_friend"
                android:src="@drawable/mission228blue"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nav_tv_friend"
                android:textSize="@dimen/sp_14"
                android:text="@string/friend"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/nav_ll_mine"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                android:paddingStart="@dimen/dp_4"
                android:paddingEnd="@dimen/dp_4"
                android:id="@+id/nav_iv_mine"
                android:src="@drawable/users224xxblue"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nav_tv_mine"
                android:textSize="@dimen/sp_14"
                android:text="@string/mine"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>