<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDefault"
    tools:context=".activity.LoginActivity"
    android:clipToPadding="true"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:id="@+id/login_ll_title"
        android:elevation="@dimen/dp_7"
        android:weightSum="3"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/colorDefault"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/dp_36"
                android:layout_height="@dimen/dp_36"
                android:layout_marginLeft="-32dp"
                android:id="@+id/login_ll_title_iv_break"
                android:onClick="onClick"
                android:src="@drawable/previous308white"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_18"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">
        </LinearLayout>
    </LinearLayout>

    <cn.edu.cqcet.yd1701.team11.smallrooike.customview.NoScrollViewPager
        android:id="@+id/login_viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/login_ll_title" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_marginBottom="@dimen/dp_20"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/login_btn_login"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_4"
            android:layout_weight="3"
            android:background="@drawable/style_login_editext"
            android:gravity="center"
            android:padding="@dimen/dp_4"
            android:text="@string/login"
            android:textSize="18sp" />

        <Button
            android:id="@+id/login_btn_logon"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_4"
            android:layout_weight="3"
            android:background="@drawable/style_login_editext"
            android:gravity="center"
            android:padding="@dimen/dp_4"
            android:text="@string/logon"
            android:textSize="@dimen/sp_18" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>