<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/login_cl_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_32"
                android:visibility="visible"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/login_iv_avatar"
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="@dimen/dp_100"
                    android:layout_margin="@dimen/dp_64"
                    android:src="@drawable/icon"
                    app:layout_constraintBottom_toTopOf="@+id/login_et_nickname"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/login_et_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_48"
                    android:layout_margin="@dimen/dp_16"
                    android:background="@drawable/style_login_editext"
                    android:hint="@string/telOrEmail"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/colorDefault"
                    app:layout_constraintBottom_toTopOf="@+id/login_et_password"
                    tools:layout_editor_absoluteX="16dp" />

                <EditText
                    android:id="@+id/login_et_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_48"
                    android:layout_margin="@dimen/dp_16"
                    android:background="@drawable/style_login_editext"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/colorDefault"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="16dp" />

                <EditText
                    android:id="@+id/login_et_yzm"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_48"
                    android:layout_margin="@dimen/dp_16"
                    android:background="@drawable/style_login_editext"
                    android:hint="@string/yzm"
                    android:inputType="text"
                    android:maxLength="4"
                    android:textColor="@color/colorDefault"
                    app:layout_constraintTop_toBottomOf="@+id/login_et_password"
                    tools:layout_editor_absoluteX="16dp" />

                <ImageView
                    android:id="@+id/login_iv_yzm"
                    android:layout_width="@dimen/dp_128"
                    android:layout_height="@dimen/dp_48"
                    android:adjustViewBounds="true"
                    android:background="@drawable/style_login_yzm"
                    android:onClick="onClick"
                    android:scaleType="fitXY"
                    app:layout_constraintBottom_toBottomOf="@+id/login_et_yzm"
                    app:layout_constraintEnd_toEndOf="@+id/login_et_yzm"
                    app:layout_constraintTop_toTopOf="@+id/login_et_yzm"
                    tools:ignore="OnClick" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>