<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_72"
        android:id="@+id/linearLayout4"
        android:background="@drawable/style_linearlayout_pd_fillet_white"
        android:elevation="@dimen/dp_3"
        android:weightSum="2"
        android:layout_margin="@dimen/dp_16"
        android:gravity="center"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/home_ll_pickup"
            android:orientation="horizontal"
            android:gravity="center"
            android:focusableInTouchMode="true"
            android:clickable="true"
            android:focusable="true"
            android:layout_weight="1">
            <ImageView
                android:layout_width="@dimen/dp_36"
                android:layout_height="@dimen/dp_36"
                android:src="@drawable/pickup03blue"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:text="@string/pickup"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="@dimen/dp_2"
            android:layout_height="@dimen/dp_32"
            android:background="@drawable/style_linearlayout_vertical_fillet"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/home_ll_delivery"
            android:orientation="horizontal"
            android:gravity="center"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:layout_weight="1"
            android:focusable="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_8"
                android:text="@string/delivery"/>
            <ImageView
                android:layout_width="@dimen/dp_36"
                android:layout_height="@dimen/dp_36"
                android:src="@drawable/delivery02blue"/>
        </LinearLayout>
    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/home_lv_LogisticsNews"
        android:visibility="gone"
        android:dividerHeight="@dimen/dp_10"
        android:scrollbarSize="@dimen/dp_0"
        android:divider="@color/coloralpha0"
        android:listSelector="@color/coloralpha0"
        android:cacheColorHint="@color/coloralpha0"
        android:fadingEdge="none"
        android:layout_gravity="center"
        android:padding="@dimen/dp_14"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/home_ll_login"
        android:background="@drawable/style_homeloginbutton_round"
        android:onClick="onClick"
        android:clickable="true"
        android:focusable="true"
        android:paddingStart="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_16"
        android:paddingTop="@dimen/dp_8"
        android:paddingBottom="@dimen/dp_8"
        android:visibility="visible"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="抱歉，请先"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/colorDefault"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/home_tv_LookHistory"
        android:visibility="gone"
        android:padding="@dimen/dp_10"
        android:layout_gravity="center"
        android:text="查看历史物流消息"
        android:textColor="@color/colorDefault"
        android:onClick="onClick"/>
</LinearLayout>